fix(collaborators): updated overflow-y property to auto

--- a/src/app/space/settings/collaborators/collaborators.component.less
+++ b/src/app/space/settings/collaborators/collaborators.component.less
@@ -31,5 +31,5 @@
 
 .collaborator-list-scroll {
   max-height: 680px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
